# RaeptorCogs

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CNAME  LICENSE.txt  README.md  genindex.html  imgui.ini  index.html  objects.inv  process_shaders.py
.doctrees/: environment.pickle
.doctrees/api/: namespaces.doctree
.doctrees/api/RaeptorCogs/: Camera.doctree  Flags.doctree  Measure.doctree  Memory.doctree  Platform.doctree  RaeptorCogs.doctree  Renderer.doctree  Text.doctree
.doctrees/api/RaeptorCogs/IO/: Font.doctree  Images.doctree  Input.doctree  Path.doctree  String.doctree  index.doctree
.doctrees/api/namespaces/: RaeptorCogs_GAPI_GL.doctree  RaeptorCogs_GAPI_Vulkan.doctree  RaeptorCogs_Singletons.doctree
.doctrees/getting-started/: first-application.doctree
.doctrees/tutorials/: introduction.doctree
_sources/api/: namespaces.rst.txt
_sources/api/RaeptorCogs/: BitArray.rst.txt  Flags.rst.txt  Measure.rst.txt  Memory.rst.txt  Random.rst.txt  Serializable.rst.txt  Singleton.rst.txt  Sprite.rst.txt  Time.rst.txt  Worker.rst.txt
_sources/api/RaeptorCogs/IO/: Images.rst.txt  Texture.rst.txt  index.rst.txt
_sources/api/namespaces/: RaeptorCogs.rst.txt  RaeptorCogs_GAPI_GL.rst.txt  RaeptorCogs_Singletons.rst.txt  std.rst.txt
_sources/tutorials/: introduction.rst.txt
_static/: collapsible_toc.css
about/: introduction.html
api/: files.html
api/RaeptorCogs/: BitOp.html  Camera.html  Memory.html  Platform.html  RaeptorCogs.html  Shape.html  Singleton.html  Text.html  Time.html
api/RaeptorCogs/GAPI/: index.html
api/RaeptorCogs/GAPI/Common/: RendererBackend.html
api/RaeptorCogs/GAPI/GL/: RendererBackend.html  index.html
api/RaeptorCogs/GAPI/Vulkan/: index.html
api/RaeptorCogs/IO/: FileIO.html  Input.html  Path.html  String.html  Texture.html
api/namespaces/: RaeptorCogs_Singletons.html
build_docs/docs/html/: .buildinfo  index.html  search.html  searchindex.js
build_docs/docs/html/.doctrees/: index.doctree
build_docs/docs/html/_sources/: index.rst.txt
build_docs/docs/html/_static/: collapsible_toc.js  custom.css
build_docs/docs/html/api/: namespaces.html
build_docs/docs/html/core-concepts/: graphics.html  serialization.html
build_docs/docs/html/getting-started/: and-now-what.html  introduction.html
build_docs/docs/html/tutorials/: introduction.html
cmake/: FileIOUtils.cmake  RaeptorLabConfig.cmake.in
core-concepts/: architecture.html
docs/: Doxyfile.in
docs/sphinx/: conf.py.in
docs/sphinx/_ext/: cppreference_resolver.py  glmreference_resolver.py  log_unresolved_references.py
docs/sphinx/about/: introduction.rst
docs/sphinx/api/: files.rst  namespaces.rst
docs/sphinx/getting-started/: and-now-what.rst  first-application.rst
examples/: app.desktop.in  resources.rc
examples/demo/: main.cpp
examples/demo/include/: global.hpp
examples/demo/include/gui/: menu.hpp
examples/demo/include/tests/: test_mass_sprites.hpp
examples/demo/src/: main.cpp
examples/demo/src/gui/: menu.cpp
examples/demo/src/tests/: test_mass_sprites.cpp
examples/test-playground/: app.desktop.in
examples/test-playground/include/: global.hpp
examples/test-playground/include/tests/: test_mass_sprites.hpp
examples/test-playground/src/: main.cpp
examples/test-playground/src/gui/: menu.cpp
examples/test-playground/src/tests/: test_mass_sprites.cpp
getting-started/: first-application.html  installation.html
glad/include/glad/: gl.h
include/: app.hpp  flags.hpp  graphic.hpp  main.hpp  memory.hpp  renderer.hpp  sprite.hpp  text.hpp  texture.hpp
include/RaeptorCogs/: BitArray.hpp  BitOp.hpp  Camera.hpp  Component.hpp  Flags.hpp  Graphic.hpp  Measure.hpp  Memory.hpp  Node.hpp  Platform.hpp  RaeptorCogs.hpp  Random.hpp  Region.hpp  Renderer.hpp  Serializable.hpp  Shape.hpp  Singleton.hpp  Sprite.hpp  Text.hpp  Time.hpp  Vertex.hpp  Window.hpp  Worker.hpp
include/RaeptorCogs/GAPI/Common/: RendererBackend.hpp
include/RaeptorCogs/GAPI/GL/: Constants.hpp  RendererBackend.hpp
include/RaeptorCogs/GAPI/Vulkan/: RendererBackend.hpp
include/RaeptorCogs/IO/: FileIO.hpp  Font.hpp  Images.hpp  Input.hpp  Path.hpp  String.hpp  Texture.hpp
include/RaeptorLab/: bit_op.hpp  graphic.hpp  memory.hpp  raeptorLab.hpp  renderer.hpp  renderer_mode.hpp  sprite.hpp  text.hpp  texture.hpp  window.hpp
include/RaeptorLab/io/: font.hpp  images.hpp  string.hpp
include/io/: font.hpp  images.hpp  string.hpp
shaders/: constants.glsl  data.glsl  data_gles.glsl  main.fs  main.vs  main_common.fs  main_common.vs  main_gles.fs  main_gles.vs  mask.fs  mask_common.fs
src/: Camera.cpp  Component.cpp  Graphic.cpp  Memory.cpp  Node.cpp  Platform.cpp  RaeptorCogs.cpp  Random.cpp  Renderer.cpp  Serializable.cpp  Shape.cpp  Sprite.cpp  Time.cpp  Window.cpp  Worker.cpp  app.cpp  bitOp.cpp  bit_op.cpp  graphic.cpp  main.cpp  memory.cpp  raeptorLab.cpp  renderer.cpp  sprite.cpp  text.cpp  texture.cpp  window.cpp
src/GAPI/Common/: RendererBackend.cpp
src/GAPI/Common/Core/: InstanceData.cpp  RenderList.cpp
src/GAPI/Common/Resources/: Object.cpp
src/GAPI/Common/Ressources/: Object.cpp
src/GAPI/GL/: RendererBackend.cpp
src/GAPI/GL/Resources/: Buffer.cpp  Shader.cpp  TextureData.cpp  VertexArray.cpp
src/GAPI/GL/Ressources/: Buffer.cpp  Shader.cpp  TextureData.cpp  VertexArray.cpp
src/GAPI/Vulkan/: RendererBackend.cpp
src/GAPI/Vulkan/Core/: Memory.cpp  Vulkan.cpp
src/GAPI/Vulkan/Resources/: Buffer.cpp  Shader.cpp  TextureData.cpp  VertexArray.cpp
src/GAPI/Vulkan/Ressources/: Buffer.cpp  Shader.cpp  TextureData.cpp  (+1 more)
src/IO/: Font.cpp  Images.cpp  Input.cpp  String.cpp  Texture.cpp
src/emscripten/: emscripten_time_stub.h  shell.html
src/io/: FileIO.cpp  Path.cpp  Texture.cpp  font.cpp  images.cpp  string.cpp
tests/: CMakeLists.txt  test_BitArray.cpp  test_BitOp.cpp  test_Camera.cpp  test_FileIO.cpp  test_Flags.cpp  test_Graphic.cpp  test_Images.cpp  test_Memory.cpp  test_Node.cpp  test_Path.cpp  test_Random.cpp  test_Region.cpp  test_Serializable.cpp  test_Singleton.cpp  test_String.cpp  test_Vertex.cpp  test_Worker.cpp
(+278 files in other folders)
